--- a/server/package.json
+++ b/server/package.json
@@ -3,26 +3,34 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
-    "start": "node build/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p"
+    "build": "tsc"
   },
   "author": "Joey Liew",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "morgan": "^1.10.0",
     "pg": "^8.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.4",
     "@types/helmet": "0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
+    "@types/node": "^14.0.23",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
